--- a/IHM/IHM/Views/ExpanderTransistorOutput.xaml
+++ b/IHM/IHM/Views/ExpanderTransistorOutput.xaml
@@ -5,69 +5,40 @@
              x:Name="expanderTransistorOutput">
   <ContentView.Content>
       <StackLayout>
-            <Expander IsExpanded="True">
-                <Expander.Header>
-                    <Grid>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="auto"/>
-                            <ColumnDefinition Width="auto"/>
-                            <ColumnDefinition Width="auto"/>
-                        </Grid.ColumnDefinitions>
-                        <Label Grid.Column="0"
-                           Text="Output Transistor - "
-                           TextColor="Black"
-                           FontSize="20"
-                           FontAttributes="Bold"/>
-                        <Label Grid.Column="1"
-                           TextColor="Black"
-                           FontSize="20"
+            <Frame BackgroundColor="{Binding Path=CardColor,
+                   Source={x:Reference expanderTransistorOutput}}"
+                   BorderColor="{Binding BorderColor}"
+                   CornerRadius="5"
+                   HasShadow="True"
+                   Padding="8"
+                   HorizontalOptions="Center"
+                   VerticalOptions="Center">
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="75" />
+                        <RowDefinition Height="4" />
+                        <RowDefinition Height="Auto" />
+                    </Grid.RowDefinitions>
+                    <Label Text="{Binding Path=TransistorOutput.Nome,
+                           Source={x:Reference expanderTransistorOutput}}"
                            FontAttributes="Bold"
-                           Text="{Binding Path=TransistorOutput.Nome,
-                           Source={x:Reference expanderTransistorOutput}}"/>
-                        <Image  Grid.Column="2"
-                                Source="expander.png"                              
-                                HorizontalOptions="End"
-                                VerticalOptions="Start"
-                                Margin="0,12,80,0">
-                            <Image.Triggers>
-                                <DataTrigger TargetType="Image"
-                                         Binding="{Binding Source={RelativeSource AncestorType={x:Type Expander}},
-                                                   Path=IsExpanded}"
-                                                   Value="True">
-                                    <Setter Property="Source"
-                                                   Value="collapse.png" />
-                                </DataTrigger>
-                            </Image.Triggers>
-                        </Image>
-                    </Grid>
-                </Expander.Header>
-                <StackLayout>
-                    <Grid>
-                        <Grid.RowDefinitions>
-                            <RowDefinition/>
-                        </Grid.RowDefinitions>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="auto"/>
-                            <ColumnDefinition Width="auto"/>
-                        </Grid.ColumnDefinitions>
-                        <Label Grid.Row="0" Grid.Column="0"
-                               Text="PWM: "
-                               TextColor="Black"
-                               FontSize="14"
-                               FontAttributes="Bold"
-                               Margin="0, 12, 80, 0">
-                        </Label>
-                        <Label Grid.Row="0" Grid.Column="1"
-                               Text="{Binding Path=TransistorOutput.PorcPwm,
-                               Source={x:Reference expanderTransistorOutput}}" 
-                               TextColor="Black"
-                               FontSize="14"
-                               FontAttributes="Bold"
-                               Margin="0, 12, 80, 0">
-                        </Label>
-                    </Grid>
-                </StackLayout>
-            </Expander>
+                           FontSize="Large"
+                           VerticalTextAlignment="Center"
+                           HorizontalTextAlignment="Start" />
+                    <BoxView Grid.Row="1"
+                             BackgroundColor="{Binding Path= BorderColor,
+                             Source={x:Reference expanderTransistorOutput}}"
+                             HeightRequest="2"
+                             HorizontalOptions="Fill" />
+                    <Label Grid.Row="2"
+                           Text="{Binding Path=TransistorOutput.Descricao,
+                           Source={x:Reference expanderTransistorOutput}}"
+                           VerticalTextAlignment="Start"
+                           VerticalOptions="Fill"
+                           HorizontalOptions="Fill" />
+                   
+                </Grid>
+            </Frame>
         </StackLayout>
   </ContentView.Content>
 </ContentView>
